fix: Apply dropdown level z-index

--- a/src/sentry/static/sentry/less/stream.less
+++ b/src/sentry/static/sentry/less/stream.less
@@ -1052,6 +1052,7 @@
 
 .stream-sort {
   margin-right: 5px;
+  z-index: 1001;
 
   .dropdown-toggle {
     .btn-default;
